[project]
name =  "advent-of-code"
authors = [
    {name = "Rachael Esler", email = "rachael.esler@gmail.com"},
]
description = "Advent of Code solutions in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">= 3.10.1"
dynamic = ["version"]

[tool.black]
line-length = 100
fast = true

[tool.mypy]
python_version = "3.10"
exclude = [
    '^advent_of_code/day04/\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.flake8]
max-line-length = 100

[tool.pylint]
suggestion-mode="yes"
unsafe-load-any-extension="no"
